// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarSection Component SideBarSection renders 1`] = `
<div>
  <nav
    class="gds-sidebar-container"
    style="height: 600px;"
  >
    <ul
      class="mainmenu"
    >
      <div
        class="sidebar-divider"
      />
      <div
        class="title"
      >
        LABEL
      </div>
      <li
        class="item "
      >
        <a
          class=""
          href="/link1"
        >
          partial url
          <div
            class="label"
          >
            LINK1
          </div>
        </a>
      </li>
      <li
        class="item "
      >
        <a
          class=""
          href="/link2"
        >
          partial url
          <div
            class="label"
          >
            LINK2
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`SideBarSection Component SideBarSection renders hidden section 1`] = `
<div>
  <nav
    class="gds-sidebar-container"
    style="height: 600px;"
  >
    <ul
      class="mainmenu"
    />
  </nav>
</div>
`;
